[Java] IDEA-379305 Improve Java annotation folding
GitOrigin-RevId: bdd65e50cbd04868cce091546385fb4cd1c3efc1